Change the font type for Part titles

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -87,10 +87,9 @@
 
 \tunemarkup{garamond}{%
 \def\urantiamainfont{Garamond Premier Pro}
-\def\urantiaparttitlefont{Garamond Premier Pro Semibold Display}
+\def\urantiaparttitlefont{GoudyHandtooled BT}
 \def\urantiaauthorfont{PF DaVinci Script Pro}
 \def\urantiatitlefont{Garamond Premier Pro Semibold Display}
-%\def\urantiaheaderfont{Garamond Premier Pro Semibold Subhead}
 \def\urantiaheaderfont{Arial Narrow}
 \def\urantiaheadingfont{Arial Narrow Bold}
 \def\urantiaexplfont{Garamond Premier Pro Medium Italic}
